syntax = "proto3";
option java_package = "orbit.shared.proto";

package orbit.shared;

import "orbit/shared/addressable.proto";


message Message {
    oneof content {
        InvocationRequest invocation_request = 1;
        InvocationResponse invocation_response = 2;
        InvocationErrorResponse invocation_error = 3;
    }
}

message InvocationRequest {
    AddressableReference reference = 1;
    string value = 2;
}

message InvocationResponse {
    string value = 1;
}

message InvocationErrorResponse {
    Status status = 1;
    string message = 2;

    enum Status {
        UNKNOWN = 0;
        UNAUTHENTICATED = 1;
        UNAUTHORIZED = 2;
        UNSENT = 3;
        // ...
    }
}

